# pipe_crawler_control

./: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
config/: edgeflex.yaml  edgeflex_clearlink.yaml  magnetic_phased_array.yaml  new_xpress_scan.yaml  nginx-captive-portal.conf
fleet/: README.md  crawler_heartbeat.py  install.sh  security_utils.py  vpn_register.py
fleet/services/: crawler-heartbeat.service  crawler-vpn-register.service  ttyd.service  wstunnel-client.service
launch/: pipe_crawler.launch.py
pipe_crawler_control/: cpu_temp_publisher.py  motor_controller.py  mqtt_bridge.py  network_info_publisher.py  simple_controller.py  update_manager.py  wt901_imu_node.py
scripts/: deploy.sh  setup.sh  update_crawler.sh
scripts/network/: 10-clearlink-static-ip  captive_portal.py  config.html  connect_to_field.sh  crawler_ui.py  install_hotspot.sh  motor_data_logger.py  remove_captive_portal.sh  report_graphs.py  security_utils.py  setup_captive_portal.sh  setup_hotspot.sh  wifi_boot_manager.sh
systemd/: xpresscan-crawler-ui.service  xpresscan-hotspot.service  xpresscan-portal.service
web/: boot_splash.html  config.html  device_mismatch.html  edgeflex.html  edgeflex_clearlink.html  index.html  magnetic_phased_array.html  manifest.json  new_xpress_scan.html  sw.js
web/css/: base.css  theme.css
web/js/: theme.js
