<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pipe_crawler_control</name>
  <version>2.3.10</version>
  <description>Simple controller for pipe crawler robot</description>
  <maintainer email="craig@example.com">craig</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>roboclaw_interfaces</depend>
  <depend>clearlink_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-yaml</depend>
  <depend>python3-serial</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
